fixed the alignment of thumbnail section google section and footer section

--- a/css3/style_trim.css
+++ b/css3/style_trim.css
@@ -97,7 +97,7 @@ a:hover {
 		position: absolute;
 		width: 1405px;
 		height: 374px;
-		top: 4717px;
+		top: 4380px;
 		overflow: visible;
 		left: 50%;
 		transform: translateX(-50%);
@@ -439,7 +439,7 @@ a:hover {
 		position: absolute;
 		width: 3000px;
 		height: 370px;
-		top: 4317px;
+		top: 3990px;
 		overflow: visible;
 		left: 50%;
 		transform: translateX(-50%);
@@ -481,7 +481,7 @@ a:hover {
 		position: absolute;
 		width: 995px;
 		height: 311.145px;
-		top: 3906px;
+		top: 3600px;
 		overflow: visible;
 		left: 50%;
 		transform: translateX(-50%);
